--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "C:\\Users\\70584\\.conda\\envs\\py3\\python.exe"
+    "python.pythonPath": "C:\\Users\\70584\\.conda\\envs\\py3\\python.exe",
+    "[python]": {
+        "editor.formatOnPaste": false
+    }
 }
